initial commit - compilation+conf

--- a/app-conf/elephant.conf
+++ b/app-conf/elephant.conf
@@ -11,8 +11,8 @@ port=8080
 # Database configuration
 db_url=localhost
 db_name=drelephant
-db_user=root
-db_password=""
+db_user=drelephant
+db_password="Dr-elephant123"
 
 # Enable web analytics for the application.
 # By default analytics is not turned on. Set this property
@@ -28,6 +28,7 @@ enable_analytics=false
 # Additional Configuration
 # Check https://www.playframework.com/documentation/2.2.x/ProductionConfiguration
 jvm_args="-Devolutionplugin=enabled -DapplyEvolutions.default=true"
+jvm_props=" -Devolutionplugin=enabled -DapplyEvolutions.default=true"
 
 # Property enables dropwizard metrics for the application.
 # More info on Dropwizard metrics at http://metrics.dropwizard.io
