--- a/resolver.conf
+++ b/resolver.conf
@@ -3,3 +3,4 @@ local
 maven-central
 cloudera:https://repository.cloudera.com/cloudera/cloudera-repos/
 maven:https://mvnrepository.com/artifact/
+maven2:https://repo1.maven.org/maven2/
