--- a/compile.conf
+++ b/compile.conf
@@ -1,4 +1,4 @@
-hadoop_version=2.6.4
+hadoop_version=3.0.0-cdh6.3.2
 spark_version=1.6.3
 play_opts=" -Dsbt.repository.config=resolver.conf"
 play_opts+=" -Dconfig.resource=application.conf"
