DCSAGA-1433 Add performance feedback based on scientific modules instead of global execution only

--- a/app-conf/elephant.conf
+++ b/app-conf/elephant.conf
@@ -10,7 +10,7 @@ port=8181
 
 # Database configuration
 db_url=localhost
-db_name=test2
+db_name=test
 db_user=drelephant
 db_password="Dr-elephant123"
 
