correction url avec contexte

--- a/app-conf/elephant.conf
+++ b/app-conf/elephant.conf
@@ -10,7 +10,7 @@ port=8181
 
 # Database configuration
 db_url=localhost
-db_name=test
+db_name=drelephant
 db_user=drelephant
 db_password="Dr-elephant123"
 
@@ -30,8 +30,8 @@ enable_analytics=false
 # Check https://www.playframework.com/documentation/2.2.x/ProductionConfiguration
 
 
-jvm_args="-Devolutionplugin=enabled -DapplyEvolutions.default=true -mem 1024 -J-Xloggc:$project_root../logs/elephant/dr-gc.`date +'%Y%m%d%H%M'` -J-XX:+PrintGCDetails"
-jvm_props=" -Devolutionplugin=enabled -DapplyEvolutions.default=true"
+jvm_args="-Devolutionplugin=enabled -DapplyEvolutions.default=true -mem 1024 -J-Xloggc:$project_root../logs/elephant/dr-gc.`date +'%Y%m%d%H%M'` -J-XX:+PrintGCDetails -Dapplication.context=/drelephant/"
+jvm_props=" -Devolutionplugin=enabled -DapplyEvolutions.default=true -Dapplication.context=/drelephant/"
 
 
 # Property enables dropwizard metrics for the application.
